--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1>Wack-a-Mole</h1>
+        <h2>This game will test your senses.</h2>
+        <ul>
+            <li></li>
+            <li>Click on the mole to increase the score.</li>
+            <li>You have limited time.</li>
+        </ul>
         <h2>Your score: </h2>
         <h2 id="score" >0</h2>
 
